# bridge

./: .gitignore  README.md  pyproject.toml
configs/: cifar10 2.yaml  cifar10.yaml  mnist 2.yaml  mnist.yaml  mnist_ddpm.yaml  mnist_ddpm_simple.yaml
scripts/: evaluate_fid.py  run_experiments.sh  visualize_ode.py  visualize_sde.py
src/bridge_diffusion/: __init__.py  cli.py
src/bridge_diffusion/config/: __init__.py  config.py
src/bridge_diffusion/evaluation/: __init__.py  metrics.py
src/bridge_diffusion/models/: __init__.py  bridge.py  ddpm.py  diffusers_unet.py
src/bridge_diffusion/sampling/: __init__.py  sampler.py
src/bridge_diffusion/training/: __init__.py  trainer.py
src/bridge_diffusion/utils/: __init__.py  device.py
tests/: conftest.py  test_config.py  test_data.py  test_diffusers_unet.py  test_sampling.py  test_utils.py
